--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
@@ -20,13 +22,11 @@ body {
   color: var(--secondary-color);
   font-family: "Nunito", sans-serif;
   font-size: 25px;
-  line-height: 1.5;
   font-size: 0.875rem;
   justify-content: center;
 }
 
 .container {
-  margin-top: 100px;
   text-align: center;
 }
 
@@ -36,5 +36,19 @@ img {
 
 #welcomeMsg {
   margin-top: 20px;
+  font-size: 2rem;
+}
+
+h2 {
+  margin-top: 15px;
   font-size: 3rem;
+}
+
+#preloader {
+  background: #000 url(preloader.gif) no-repeat center center;
+  background-size: 30%;
+  width: 100%;
+  height: 100vh;
+  z-index: 100;
+  position: fixed;
 }
